# obscura-max

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/obscura-browser/: Cargo.toml
crates/obscura-browser/src/: context.rs  lib.rs  page.rs
crates/obscura-cdp/: Cargo.toml
crates/obscura-cdp/src/: dispatch.rs  lib.rs  server.rs
crates/obscura-cdp/src/domains/: browser.rs  dom.rs  fetch.rs  input.rs  lp.rs  mod.rs  network.rs  page.rs  runtime.rs  storage.rs  target.rs
crates/obscura-cli/: Cargo.toml
crates/obscura-cli/src/: main.rs  worker.rs
crates/obscura-dom/src/: selector.rs  serialize.rs  tree.rs
crates/obscura-js/: Cargo.toml
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: lib.rs  module_loader.rs  ops.rs  runtime.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: blocklist.rs  client.rs  cookies.rs  lib.rs  wreq_client.rs
crates/obscura-net/tests/: stealth_baseline.rs
crates/obscura-stealth/: Cargo.toml
crates/obscura-stealth/profiles/: chrome_linux_en_gb.json  chrome_macos_en_us.json  chrome_win11_en_us.json
crates/obscura-stealth/src/: canvas.rs  consistency.rs  lib.rs  profile.rs
