[package]
name = "obscura-net"
version.workspace = true
edition.workspace = true

[features]
default = []
stealth = ["wreq", "wreq-util"]

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
wreq = { version = "6.0.0-rc.28", optional = true, features = ["prefix-symbols"] }
wreq-util = { version = "3.0.0-rc.10", optional = true }
